--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "patagoniamagica",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch-css":"sass --watch scss/main.scss css/main.css"
+    "watch-css": "sass --watch scss/main.scss css/main.css"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
